# rusticle

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: build_and_test.yml  tag_release.yml
src/: config.rs  embedding.rs  main.rs  web.rs
