[package]
name = "simgen"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
fastembed = "4.3.0"
sqlite-vec = "0.1.6"
rusqlite = { version = "0.32.1", features = ["bundled"] }
deadpool-sqlite = "0.9.0"
clap = { version = "4.5.23" }
toml = "0.8.19"
serde = "1.0.216"
env_logger = "0.10"
log = "0.4"
zerocopy = "0.8.13"

# [features]
